[project]
name = "supportenv"
version = "1.0.0"
description = "Customer support ticket triage environment — classify, prioritize, and resolve real customer tickets."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "flask>=3.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest"]
